
Added new emulated machines:
-ZX Spectrum 48k+
-Microdigital TK80
-Microdigital TK82
-Microdigital TK82C
-Microdigital TK83
-Microdigital TK85
-Microdigital TK95 Spanish
-Timex Computer 2048
-Timex Computer 2068
-Timex Sinclair 1000
-Timex Sinclair 1500

Added Hilow Barbanegra emulation
Added Transtape emulation
Added Microhobby Pokeador Automatico emulation
Added Dinamic SD1 emulation
Allow .Z80 corrupted snapshot loading from ZXSP emulator with additional header of 31 byte size
Added ZSF support for Timex TS2068, MK14, Chrome, Prism, Chloe, Sam Coupe
Added path setting where to download files from the speccy and zx81 online browser
Added disk image browsing from storage MMC/IDE menus
Added PZX load support as standard tape
Added TAP to PZX converter
Added TAP to TZX turbo converter (TZX Turbo 4000 bauds, to use with Rodolfo Guerra ROMS)
Added some actions than can be fired from command line and don't start ZEsarUX:
--convert-tap-tzx, --convert-tap-tzx-turbo-rg, --convert-tap-pzx , --convert-tzx-tap, --convert-pzx-tap


* Improvements:

Improved Z88 emulation:
-Changed colour palette to better match a real Z88
-Show keys shortcuts below the Z88 display
-Snapshot setting & menu action to synchronize Z88 clock
-Inserting Z88 cards: now it does not hang the emulator during the insert
-Selecting Z88 cards: submenus for types and sizes
-Z88 footer: show when writing a card in slot 3, colors follow style
-Z88 device icons: different icons for slot 1,2,3, show when writing a card in slot 3, show when flap is open

Improved File selector: 
-Allow to have a full screen preview if window is big enough
-Better hotkeys explanation

Improved Debugging: 
-Added a setting to show on which scanline has been executed a Halt, inverting border color
-When enabling step mode, emulation is paused on all menus
-Preserve step mode when exiting debug cpu that was opened by a breakpoint
-When a breakpoint is fired, step mode is kept on all menus