@@ -98,7 +98,9 @@
 
 * Emulates Microhobby Pokeador Automatico
 
-* Emulates Dinamic SD1 emulation
+* Emulates Dinamic SD1
+
+* Emulates Spec-mate
 
 * Emulates Datagear/MB02 DMA, ZX-Uno DMA
 
