@@ -100,6 +100,8 @@
 
 * Emula Dinamic SD1
 
+* Emula Spec-mate
+
 * Emula Datagear/MB02 DMA, ZX-Uno DMA
 
 * Emula Disco +3
